2009-09-04  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-app-menu.c (hildon_app_menu_repack_items):
	Redraw menu when the number of items change.

	Fixes: NB#131911 (Appmenu does not resize properly, when number of
	menu items change)

2009-09-03  Claudio Saavedra  <csaavedra@igalia.com>

	* hildon/hildon-pannable-area.c:
	(hildon_pannable_area_launch_fade_timeout),
	(hildon_pannable_area_motion_event_scroll),
	(hildon_pannable_area_check_move),
	(hildon_pannable_area_button_release_cb),
	(hildon_pannable_area_scroll_to):

	Use a priority of G_PRIORITY_IDLE_HIGH + 20 for all the pannable
	area drawing operations, since this is the recommended for drawing
	operations.

	Fixes: NB#110894 (In event view containing very large description
	field, application menu is displayed blank while panning)
	Fixes: NB#131942 (HildonPickerDialog is seen empty when popping up
	for the first time)

2009-09-03  Alberto Garcia  <agarcia@igalia.com>

	* doc/hildon-sections.txt
	* hildon/hildon-button.c
	* hildon/hildon-edit-toolbar.c
	* hildon/hildon-gtk.[ch]
	* hildon/hildon-main.c
	* hildon/hildon-program.c
	* hildon/hildon-stackable-window.c:
	Documentation updates

2009-08-28  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-app-menu.c
	(+hildon_app_menu_grab_notify, hildon_app_menu_class_init):
	Close the menu if it receives a grab-notify signal.

	Fixes: NB#134533 (UI freezes if we show a dialog with
	gtk_dialog_run() while a menu is opened)

2009-08-27  Alejandro G. Castro  <alex@igalia.com>

	* hildon/hildon-pannable-area.c,
	(hildon_pannable_area_class_init): Reverted tuning modifications:
	"Pannign needs to be faster" and "Pannable kinetics in large lists
	needs tuning".

2009-08-26  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-sound.c (hildon_play_system_sound):
	Set "module-stream-restore.id" to "x-maemo-system-sound" when
	playing system sounds

	Fixes: NB#133767 (Information and confirmation note sound should
	follow system profile setting)
